Implement deserialization to notice composer.